--- a/style.css
+++ b/style.css
@@ -234,6 +234,10 @@ a:hover{
 	.grid-center-item:not(.--info-caret){
 		justify-self: left;
 	}
+
+	.time,.pop,.version,.projects{
+		padding-top:.5rem;
+	}
 }
 
 
