--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ table {
 	--magenta:#D854EE;
 	--indigo:#44E2E2;
 	--green:#54A044;
+	--bs-blue:#3178c6;
+	--royal:#563d7c;
+	--bs-warning:#ffc107;
+	--bs-danger:#dc3545;
 	--skill-list-grey:#6A6666;
 	--platinum:#E5E4E2;
 	--VIIIPX:.5rem;
@@ -96,6 +100,8 @@ a:hover{
 .no-stroke{-webkit-text-stroke:unset}
 .thin-stroke{-webkit-text-stroke: 1px var(--black);}
 .thick-stroke{-webkit-text-stroke: 2px var(--black);}
+
+.slate-bg{background-color:var(--skill-list-grey)}
 
 .flex{display:flex}
 .flex-column{flex-direction: column;}
@@ -256,6 +262,10 @@ a:hover{
 	margin-top:var(--XXPX);
 }
 
+.--project-div{
+	padding:1rem 1rem;
+}
+
 .--project-image-div, .--project-data-div{
 	width:18rem;
 }
@@ -263,16 +273,51 @@ a:hover{
 	width:100%;
 }
 
+div.bg-js{
+	background-color:var(--bs-warning);
+}
+
 div.bg-royal{
-	background-color:purple;
+	background-color:var(--royal);
+}
+
+div.bg-typescript{
+	background-color:var(--bs-blue);
+}
+
+div.bg-html{
+	background-color:var(--bs-danger);
 }
 
 .--progress-data{
 	margin:1rem 0 1rem 1rem;
 	justify-content: space-between;
-	list-style-type: disc;
 	font-weight:400;
 	font-family:'Roboto Condensed', sans-serif;
+}
+
+.--progress-data li::before{
+	content: "\2022";
+	font-weight: bold;
+	display:inline-block;
+	width:1rem;
+	margin-left: -1rem;
+}
+
+.--progress-data li.js::before{	
+	color:var(--bs-warning);
+}
+
+.--progress-data li.css::before{
+	color:var(--royal);
+}
+
+.--progress-data li.html::before{
+	color:var(--bs-danger);
+}
+
+.--progress-data li.ts::before{
+	color:var(--bs-blue);
 }
 
 li span.--lang-percentage{
